Testing pipeline (#110)
Co-authored-by: Constructor <fractalminds@protonmail.com>