@@ -23,6 +23,9 @@ val kotlinxCoroutinesVersion: String by project
 val discordIPCVersion: String by project
 val fuelVersion: String by project
 val resultVersion: String by project
+val mockitoKotlin: String by project
+val mockitoInline: String by project
+val mockkVersion: String by project
 
 base.archivesName = "${base.archivesName.get()}-api"
 
@@ -57,6 +60,10 @@ dependencies {
 
     // Baritone
     modImplementation("baritone-api:baritone-unoptimized-fabric:1.10.2") { isTransitive = false }
+    testImplementation(kotlin("test"))
+    testImplementation("org.mockito.kotlin:mockito-kotlin:$mockitoKotlin")
+    testImplementation("org.mockito:mockito-inline:$mockitoInline")
+    testImplementation("io.mockk:mockk:${mockkVersion}")
 }
 
 tasks {
@@ -66,5 +73,18 @@ tasks {
 
     test {
         useJUnitPlatform()
+        jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
+    }
+}
+
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+}
+
+subprojects {
+    tasks.named("build") {
+        dependsOn("test")
     }
 }
